# digit-recognizer

./: .gitignore  CMakeLists.txt  README.md
include/: digit_recognizer.h  gpu_backend.h  image_processor.h  mnist_loader.h  neural_network.h
scripts/: download_mnist.ps1  download_mnist.sh
src/: digit_recognizer.cpp  gpu_kernels.hip  image_processor.cpp  main.cpp  mnist_loader.cpp  neural_network.cpp
test/: stop_digit_recognizer.cpp  stress_test.cpp
tools/: generate_samples.cpp
